<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/canvasSV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:background="#FFFFFF"
        android:paddingBottom="@dimen/login_bottom_margin">

        <!-- Top section -->
        <LinearLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/login_logo_top_padding">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="308dp"
                android:layout_height="@dimen/login_logo_height"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:src="@drawable/chimwemwe" />

            <TextView
                android:id="@+id/login_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/login_title"
                android:textColor="@color/chimwemwe_text_primary"
                android:textSize="@dimen/login_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_build_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/app_version"
                android:textColor="#999999"
                android:textSize="@dimen/login_build_text_view_textSize" />

        </LinearLayout>

        <!-- Middle section -->
        <LinearLayout
            android:id="@+id/middle_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_section"
            android:layout_marginTop="@dimen/login_middle_section_padding_top"
            android:orientation="vertical"
            android:paddingStart="@dimen/login_horizontal_margin"
            android:paddingEnd="@dimen/login_horizontal_margin">

            <EditText
                android:id="@+id/login_user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_view_component_height"
                android:background="@drawable/bg_login_field"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:textColor="@color/chimwemwe_text_primary"
                android:textColorHint="#bfbfbf"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/login_edit_text_textSize" />

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_view_component_height"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_login_field"
                android:hint="@string/password"
                android:imeActionId="@integer/login"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:textColor="@color/chimwemwe_text_primary"
                android:textColorHint="#bfbfbf"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/login_edit_text_textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="12dp">

                <CheckBox
                    android:id="@+id/login_show_password_checkbox"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:button="@drawable/white_checkbox_bg_selector" />

                <TextView
                    android:id="@+id/login_show_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/show_password_text"
                    android:textColor="#585858"
                    android:textSize="@dimen/login_edit_text_textSize" />

            </LinearLayout>

            <Button
                android:id="@+id/login_login_btn"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/bg_login_btn_chimwemwe"
                android:text="@string/login_text"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <!-- Bottom section -->
        <LinearLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/middle_section"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <ImageView
                android:id="@+id/opensrp_logo_image_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_opensrp_logo_height"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/coat_of_arms_recommended" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
