...
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:text="Jane Phiri" />

                <TextView
                    android:id="@+id/dash_facility_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="#B3FFFFFF"
                    android:textSize="13sp"
                    tools:text="Kapirimposhi District" />
...
